Sistemata logica MVC, migliorato DataSeeder e Scheduler