@@ -4,24 +4,25 @@ import com.websystemdesign.model.Camera;
 import com.websystemdesign.model.Prenotazione;
 import com.websystemdesign.model.StatoCamera;
 import com.websystemdesign.model.StatoPrenotazione;
-import com.websystemdesign.repository.CameraRepository;
-import com.websystemdesign.repository.PrenotazioneRepository;
+import com.websystemdesign.service.CameraService;
+import com.websystemdesign.service.PrenotazioneService;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class RoomScheduler {
 
-    private final PrenotazioneRepository prenotazioneRepository;
-    private final CameraRepository cameraRepository;
+    private final PrenotazioneService prenotazioneService;
+    private final CameraService cameraService;
 
-    public RoomScheduler(PrenotazioneRepository prenotazioneRepository, CameraRepository cameraRepository) {
-        this.prenotazioneRepository = prenotazioneRepository;
-        this.cameraRepository = cameraRepository;
+    public RoomScheduler(PrenotazioneService prenotazioneService, CameraService cameraService) {
+        this.prenotazioneService = prenotazioneService;
+        this.cameraService = cameraService;
     }
 
     @Scheduled(cron = "0 0 11 * * *")
@@ -29,16 +30,16 @@ public class RoomScheduler {
     public void forceRoomCleanupStatus() {
         LocalDate oggi = LocalDate.now();
 
-        List<Prenotazione> inScadenza = prenotazioneRepository.findAll().stream()
+        List<Prenotazione> inScadenza = prenotazioneService.getAllPrenotazioni().stream()
                 .filter(p -> p.getDataFine().equals(oggi))
                 .filter(p -> p.getStato() != StatoPrenotazione.CHECKED_OUT)
-                .toList();
+                .collect(Collectors.toList());
 
         for (Prenotazione p : inScadenza) {
             Camera c = p.getCamera();
             if (c.getStatus() != StatoCamera.DA_PULIRE) {
                 c.setStatus(StatoCamera.DA_PULIRE);
-                cameraRepository.save(c);
+                cameraService.saveRoom(c);
                 System.out.println("Scheduler: Camera " + c.getNumero() + " impostata DA_PULIRE (Timeout 11:00)");
             }
         }
